crates/figue/tests/integration/snapshots/main__integration__deser_errors__deser_error_env_negative_for_unsigned.snap
---
source: crates/figue/tests/integration/deser_errors.rs
expression: "$crate :: common :: strip_ansi(& report.to_string())"
---
Error: failed to parse "-1" as u16 at config.port
   ╭─[ <env>:1:12 ]
   │
 1 │ APP__PORT="-1"
   │            ─┬  
   │             ╰── failed to parse "-1" as u16 at config.port
───╯
